--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/css/datepicker.min.css"> <!-- para date picker -->    
   </head>
-  <body>
+  <body class="bg-dark">
     <app-root></app-root>
     <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/js/datepicker-full.min.js"></script> <!-- para date picker -->
   </body>
